--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
-    "@capacitor/android": "6.1.0",
+    "@capacitor/android": "^6.1.0",
     "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.1",
@@ -49,24 +49,24 @@
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
-    "@types/jasmine": "~5.1.4",
+    "@types/jasmine": "^5.1.4",
     "@types/node": "^20.12.8",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.2.3",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~5.1.2",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "ts-node": "~10.9.2",
-    "typescript": "~5.4.5"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jasmine-core": "^5.1.2",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "description": "An Ionic project"
 }
